--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,14 +18,17 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install dependencies
+      - name: Upgrade pip and install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install py2app pandas matplotlib python-docx tabula-py tabulate numpy
+          pip install wheel
+          pip install --use-pep517 py2app pandas matplotlib python-docx tabula-py tabulate numpy
+
+      - name: Show installed packages for debugging
+        run: pip list
 
       - name: Build the app
-        run: |
-          python setup.py py2app
+        run: python setup.py py2app
 
       - name: Archive the build
         uses: actions/upload-artifact@v2
